# ai-agent-product-support

./: .gitignore  README.md  chunk_documents.py  ingest_quadrant.py  main.py  pyproject.toml  troubleshoot_agent.py
chunks/: DOC_001_CHUNK_001.txt  DOC_002_CHUNK_001.txt  DOC_003_CHUNK_001.txt  DOC_004_CHUNK_001.txt  DOC_005_CHUNK_001.txt  DOC_006_CHUNK_001.txt  DOC_007_CHUNK_001.txt  DOC_008_CHUNK_001.txt  DOC_009_CHUNK_001.txt  DOC_010_CHUNK_001.txt  DOC_011_CHUNK_001.txt  DOC_012_CHUNK_001.txt  DOC_013_CHUNK_001.txt  DOC_014_CHUNK_001.txt  DOC_015_CHUNK_001.txt  DOC_016_CHUNK_001.txt  DOC_017_CHUNK_001.txt  DOC_018_CHUNK_001.txt  DOC_019_CHUNK_001.txt  DOC_020_CHUNK_001.txt  DOC_021_CHUNK_001.txt  DOC_022_CHUNK_001.txt  DOC_023_CHUNK_001.txt  DOC_024_CHUNK_001.txt  DOC_025_CHUNK_001.txt  DOC_026_CHUNK_001.txt  DOC_027_CHUNK_001.txt  DOC_028_CHUNK_001.txt  DOC_029_CHUNK_001.txt  DOC_030_CHUNK_001.txt  DOC_031_CHUNK_001.txt  DOC_032_CHUNK_001.txt  DOC_033_CHUNK_001.txt  DOC_034_CHUNK_001.txt  DOC_035_CHUNK_001.txt  DOC_036_CHUNK_001.txt  DOC_037_CHUNK_001.txt  DOC_038_CHUNK_001.txt  DOC_039_CHUNK_001.txt  DOC_040_CHUNK_001.txt  (+1 more)
data/: Amazon_EchoDot_Reset.json  Anker_737_PowerBank.json  Apple_Watch_Ultra_Depth.json  Breville_Barista_Express.json  Canon_G3000_Ink.json  Dell_XPS15_BIOS.json  Garmin_Fenix7_Maps.json  GoPro_Hero11_SD.json  Google_NestHub_Display.json  HP_OfficeJet_9015.json  InstantPot_Duo_Burn.json  JBL_Flip6_Charging.json  Nanoleaf_Shapes_Pairing.json  Nespresso_Vertuo_Descale.json  Nintendo_Switch_Joycon.json  Philips_Hue_Bridge_Connection.json  (+4 more)
(+22 files in other folders)
